# zero-to-hero

./: main.py  makemore.ipynb  makemore_pt1_exercises.ipynb  makemore_pt2.ipynb  makemore_pt3.ipynb  micrograd.ipynb  micrograd_exercises.ipynb  pyproject.toml
